# seep_detection

./: .gitignore  README.md  pyproject.toml
notebooks/: data_exploration.ipynb
runs/segment/train/: args.yaml
src/: consts.py  preprocess_dataset.py  train_yoloseg.py  training_args.py
